--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
-    "htmx": "^0.0.2",
     "htmx.org": "^2.0.4"
   },
   "devDependencies": {
