ready for npx-create

--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "setup": "node setupFolders.js",
-    "build": "tsc && cp -r src/public dist/public && rm -rf dist/public/assets && cp -r src/views dist/views",
+    "build": "rm -rf dist && tsc && cp -r src/public dist/public && cp -r src/views dist/views",
     "start": "node dist/app.js",
     "watch:ts": "esbuild src/assets/js/*.ts --bundle --outdir=src/public/js --watch",
     "watch:css": "postcss src/assets/css/*.css --dir src/public/css --watch",
-    "watch": "npm-run-all --parallel watch:ts watch:css",
+    "watch:files": "node watchFiles.js",
+    "watch": "concurrently \"npm run watch:files\" \"npm run watch:ts\" \"npm run watch:css\"",
     "dev:server": "nodemon --watch src --exec ts-node src/app.ts",
-    "dev": "npm run setup && npm-run-all --parallel dev:server watch",
+    "dev": "concurrently \"npm run dev:server\" \"npm run watch\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["npx", "create", "project", "htmx", "node", "express", "handlebar", "TypeScript"],
+  "author": "Tun Lin Phyo",
   "license": "ISC",
   "description": "",
   "dependencies": {
@@ -22,12 +22,14 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "fs-extra": "^11.3.0",
     "htmx.org": "^2.0.4"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.5",
     "chokidar": "^4.0.3",
+    "concurrently": "^9.1.2",
     "esbuild": "^0.25.0",
     "nodemon": "^3.1.9",
     "npm-run-all": "^4.1.5",
